Create a many-to-many table to link tags and storages
This also means that tags are independently active from
storages; deactivating all storage that contain a certain
tag does not hide that tag from the user. If a user tags
a resource from a storage that doesn't contain that tag,
there is no new link made from that storage to that tag.

This table only collects where the tags came from.

--- a/libs/resources/sql.qrc
+++ b/libs/resources/sql.qrc
@@ -18,5 +18,6 @@
         <file alias="select_tag.sql">sql/select_tag.sql</file>
         <file alias="update_from_001.sql">sql/update_from_001.sql</file>
         <file alias="create_metadata.sql">sql/create_metadata.sql</file>
+        <file alias="create_tags_storages.sql">sql/create_tags_storages.sql</file>
     </qresource>
 </RCC>
