--- a/libs/ui/forms/wdgsessionmanager.ui
+++ b/libs/ui/forms/wdgsessionmanager.ui
@@ -20,7 +20,7 @@
       <number>0</number>
      </property>
      <item>
-      <widget class="QListWidget" name="lstSessions"/>
+      <widget class="QListView" name="lstSessions"/>
      </item>
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_2">
