--- a/libs/ui/forms/wdggeneralsettings.ui
+++ b/libs/ui/forms/wdggeneralsettings.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>552</width>
-    <height>468</height>
+    <width>606</width>
+    <height>539</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -655,13 +655,6 @@
           <string>Kra File Compression</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_3">
-          <item row="0" column="0">
-           <widget class="QCheckBox" name="m_chkCompressKra">
-            <property name="text">
-             <string>Compress .kra files more (slows loading/saving)</string>
-            </property>
-           </widget>
-          </item>
           <item row="1" column="0">
            <widget class="QCheckBox" name="chkZip64">
             <property name="toolTip">
@@ -669,6 +662,23 @@
             </property>
             <property name="text">
              <string>Use Zip64 (for very large files: cannot be opened in versions of Krita older than 4.2.0)</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0">
+           <widget class="QCheckBox" name="m_chkCompressKra">
+            <property name="text">
+             <string>Compress .kra files more (slows loading/saving)</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0">
+           <widget class="QCheckBox" name="m_chkTrimKra">
+            <property name="toolTip">
+             <string extracomment="(information outside the image boundaries will get lost. Saving will be slower."/>
+            </property>
+            <property name="text">
+             <string>Trim .kra files when saving</string>
             </property>
            </widget>
           </item>
