Add an option to save the image trimmed
This removes all empty tiles from the borders of every paint
device and all pixels outside the image borders. It is off by
default, of course.

CCBUG:414903

--- a/libs/ui/forms/wdggeneralsettings.ui
+++ b/libs/ui/forms/wdggeneralsettings.ui
@@ -678,7 +678,7 @@
              <string extracomment="(information outside the image boundaries will get lost. Saving will be slower."/>
             </property>
             <property name="text">
-             <string>Trim .kra files when saving</string>
+             <string>Trim files before saving</string>
             </property>
            </widget>
           </item>
