--- a/libs/widgets/WdgDlgInternalColorSelector.ui
+++ b/libs/widgets/WdgDlgInternalColorSelector.ui
@@ -45,6 +45,9 @@
          <property name="currentIndex">
           <number>0</number>
          </property>
+         <property name="tabBarAutoHide">
+          <bool>true</bool>
+         </property>
          <widget class="QWidget" name="tab_channel">
           <attribute name="title">
            <string>Channels</string>
@@ -79,7 +82,7 @@
          </widget>
          <widget class="QWidget" name="tab_hsx">
           <attribute name="title">
-           <string>HS&lt;X&gt;</string>
+           <string>Unknown</string>
           </attribute>
           <layout class="QVBoxLayout" name="verticalLayout_3">
            <property name="spacing">
