Remove resources() from kis_dlg_layer_style
Before this commit, Krita used resources() call to get the layer styles
to populate the layer styles list widget. This commit changes the list
widget to list view and puts proxy model for it, and populates combobox
with storage locations from the layer styles resources.
Note:
- there is no "All" option in the layer styles collections combobox
- combobox items are just by QString

--- a/libs/ui/layerstyles/wdgstylesselector.ui
+++ b/libs/ui/layerstyles/wdgstylesselector.ui
@@ -18,7 +18,7 @@
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="1" column="0">
-       <widget class="QListWidget" name="listStyles"/>
+       <widget class="QListView" name="listStyles"/>
       </item>
       <item row="0" column="0">
        <widget class="QComboBox" name="cmbStyleCollections"/>
