--- a/libs/ui/forms/wdggeneralsettings.ui
+++ b/libs/ui/forms/wdggeneralsettings.ui
@@ -23,10 +23,10 @@
    </size>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
+   <item row="1" column="0">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>4</number>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
@@ -540,8 +540,8 @@
             </property>
             <property name="minimumSize">
              <size>
-              <width>75</width>
-              <height>0</height>
+              <width>151</width>
+              <height>26</height>
              </size>
             </property>
             <property name="suffix">
@@ -774,8 +774,8 @@
          </property>
          <property name="minimumSize">
           <size>
-           <width>75</width>
-           <height>0</height>
+           <width>92</width>
+           <height>26</height>
           </size>
          </property>
          <property name="toolTip">
@@ -821,8 +821,8 @@
          </property>
          <property name="minimumSize">
           <size>
-           <width>75</width>
-           <height>0</height>
+           <width>78</width>
+           <height>26</height>
           </size>
          </property>
          <property name="minimum">
@@ -903,7 +903,7 @@
          </item>
         </layout>
        </item>
-       <item row="13" column="1">
+       <item row="15" column="1">
         <spacer name="verticalSpacer_4">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -915,6 +915,19 @@
           </size>
          </property>
         </spacer>
+       </item>
+       <item row="14" column="1">
+        <widget class="QCheckBox" name="m_chkAutoPin">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="text">
+          <string>Automatically pin new layers to timeline</string>
+         </property>
+         <property name="checked">
+          <bool>false</bool>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
