Change the TabletView into ListView in BundleManager
Before this commit, the BundleManager had TableView
to show all the storages. This commit changes it into a ListView
with an ItemDelegate that will be more covenient to use.

Note: the item delegate is incomplete and wrong for now.
It doesn't show the items it should because there is a mix of
indeces between the source model and the proxy model.

--- a/plugins/extensions/resourcemanager/wdgdlgbundlemanager.ui
+++ b/plugins/extensions/resourcemanager/wdgdlgbundlemanager.ui
@@ -14,19 +14,13 @@
    <item>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <widget class="QTableView" name="tableView">
+      <widget class="QListView" name="listView">
        <property name="iconSize">
         <size>
          <width>48</width>
          <height>48</height>
         </size>
        </property>
-       <attribute name="horizontalHeaderStretchLastSection">
-        <bool>true</bool>
-       </attribute>
-       <attribute name="verticalHeaderStretchLastSection">
-        <bool>true</bool>
-       </attribute>
       </widget>
      </item>
      <item>
@@ -383,7 +377,7 @@
   </layout>
  </widget>
  <tabstops>
-  <tabstop>tableView</tabstop>
+  <tabstop>listView</tabstop>
   <tabstop>bnAdd</tabstop>
   <tabstop>bnNew</tabstop>
   <tabstop>bnDelete</tabstop>
