--- a/plugins/paintops/libpaintop/forms/wdgpredefinedbrushchooser.ui
+++ b/plugins/paintops/libpaintop/forms/wdgpredefinedbrushchooser.ui
@@ -158,7 +158,14 @@
        <property name="verticalSpacing">
         <number>10</number>
        </property>
-       <item row="5" column="1">
+       <item row="0" column="0">
+        <widget class="QLabel" name="brushSizeLabel">
+         <property name="text">
+          <string>Size:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="7" column="1">
         <widget class="QPushButton" name="resetBrushButton">
          <property name="text">
           <string>Reset Predefined Tip</string>
@@ -199,17 +206,13 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="brushSizeLabel">
+       <item row="5" column="1">
+        <widget class="QCheckBox" name="preserveBrushPresetSettings">
          <property name="text">
-          <string>Size:</string>
+          <string>Preserve Brush Preset Settings</string>
          </property>
-        </widget>
-       </item>
-       <item row="3" column="1">
-        <widget class="QCheckBox" name="useColorAsMaskCheckbox">
-         <property name="text">
-          <string>Use Color as Mask</string>
+         <property name="checked">
+          <bool>true</bool>
          </property>
         </widget>
        </item>
@@ -223,12 +226,22 @@
          </property>
         </widget>
        </item>
-       <item row="4" column="1">
-        <widget class="QCheckBox" name="preserveBrushPresetSettings">
+       <item row="3" column="1">
+        <widget class="QCheckBox" name="useColorAsMaskCheckbox">
          <property name="text">
-          <string>Preserve Brush Preset Settings</string>
+          <string>Use Color as Mask</string>
          </property>
-         <property name="checked">
+        </widget>
+       </item>
+       <item row="4" column="1">
+        <widget class="QCheckBox" name="preserveLightnessCheckbox">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+         <property name="text">
+          <string>Preserve Lightness</string>
+         </property>
+         <property name="checkable">
           <bool>true</bool>
          </property>
         </widget>
