Implement "Neutral Point" feature for lightness overlay brush
Neutral point maps specific brush pixel value to "neutral" value,
which doesn't change the selected color. Pixles lighter than
neutral value make brush color lighet, pixels darker --- darker.

--- a/plugins/paintops/libpaintop/forms/wdgpredefinedbrushchooser.ui
+++ b/plugins/paintops/libpaintop/forms/wdgpredefinedbrushchooser.ui
@@ -264,6 +264,9 @@
             <item>
              <layout class="QVBoxLayout" name="verticalLayout_4">
               <item>
+               <widget class="KisSliderSpinBox" name="intAdjustmentMidPoint" native="true"/>
+              </item>
+              <item>
                <widget class="KisSliderSpinBox" name="intBrightnessAdjustment" native="true"/>
               </item>
               <item>
