Implement Fill Tool and magic wand on color labeled layers
Before this commit, Fill Tool and Contiguous Selection Tool
would have only two modes: to work on
a specific layer or to work on a projection of the whole image.
This commit adds a new mode: working on a set of layers that are
labeled with a specific color label. The user can choose it in
Tool Options.

Three modes:
- current layer
- all layers
- color labeled layers - there can be multiple labels selected

--- a/libs/ui/forms/wdgselectionoptions.ui
+++ b/libs/ui/forms/wdgselectionoptions.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>271</width>
-    <height>110</height>
+    <height>159</height>
    </rect>
   </property>
   <layout class="QFormLayout" name="formLayout">
@@ -185,6 +185,12 @@
      </property>
     </widget>
    </item>
+   <item row="3" column="0" colspan="2">
+    <widget class="KisColorFilterCombo" name="cmbColorLabels"/>
+   </item>
+   <item row="2" column="0" colspan="2">
+    <widget class="QComboBox" name="cmbSampleLayersMode"/>
+   </item>
   </layout>
  </widget>
  <customwidgets>
@@ -192,6 +198,11 @@
    <class>KoGroupButton</class>
    <extends>QToolButton</extends>
    <header location="global">KoGroupButton.h</header>
+  </customwidget>
+  <customwidget>
+   <class>KisColorFilterCombo</class>
+   <extends>QComboBox</extends>
+   <header>kis_color_filter_combo.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
