--- a/krita/data/cursors/cursors.qrc
+++ b/krita/data/cursors/cursors.qrc
@@ -23,5 +23,6 @@
         <file>zoom_discrete.xpm</file>
         <file>zoom_smooth.xpm</file>
         <file>tool_freehand_cursor.png</file>
+        <file>tool_color_picker_cursor.png</file>
     </qresource>
 </RCC>
