--- a/krita/pics/svg/svg-icons.qrc
+++ b/krita/pics/svg/svg-icons.qrc
@@ -153,5 +153,7 @@
         <file>light_gamut-mask-on.svg</file>
         <file>dark_ratio.svg</file>
         <file>light_ratio.svg</file>
+        <file>dark_python.svg</file>
+        <file>light_python.svg</file>
     </qresource>
 </RCC>
